js y css mejorado

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		<section class="tarjeta">
 		<!--Donde iran la seccion de fotos de mi trabajo"Publicidad"-->
 			<section class="slider_banner">
-				<div class="banner">
+				<div class="banner" id="banner">
 				<!--Alto= 300, Ancho=700 pixeles-->
-					<img class="slide active" src="img/nino1.jpg" alt="">
-					<img class="slide" src="img/nino1.jpg" alt="">
-					<img class="slide" src="img/nino1.jpg" alt="">
-					<img class="slide" src="img/nino1.jpg" alt="">
+					<img class="slide active" src="/nino1.jpg" alt="">
+					<img class="slide" src="/nino1.jpg" alt="">
+					<img class="slide" src="/nino1.jpg" alt="">
+					<img class="slide" src="/nino1.jpg" alt="">
 				</div>
 
 				<!--id pata js, class pata CSS-->
@@ -27,7 +27,7 @@
 				<a href="#" id="banner-next" class="flecha-banner siguiente"> <span class=" fa fa-chevron-right"></span></a>
 				
 			</section>
-			<section class="info">
+			<section class="slider_info">
 
 				<a href="#" id="info-prev"  class="flecha-info anterior"> <span class=" fa fa-chevron-left"></span></a>
 				<a href="#" id="info-next" class="flecha-info siguiente"> <span class=" fa fa-chevron-right"></span></a>
@@ -72,5 +72,7 @@
 		
 	</div>
 
+	<script src="js/jquery.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
